--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # Compiled class file
 *.class
+build
+target
+targets
 
 # Log file
 *.log
@@ -21,3 +24,10 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# project files
+.idea
+.gradle
+.classpath
+.project
+
