--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
 
+    testImplementation 'org.mockito:mockito-all:1.10.19'
+
     testImplementation 'org.slf4j:slf4j-simple:1.7.28'
 
 
